substrate/frame/support/test/tests/construct_runtime_ui/invalid_where_param.stderr
error: expected one of: `Block`, `NodeBlock`, `UncheckedExtrinsic`
  --> tests/construct_runtime_ui/invalid_where_param.rs:24:3
   |
24 |         TypeX = Block,
   |         ^^^^^
